tests/snapshots/cli__reference_files@factor__1.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/1.factor
---
status: 0
stdout:
  - "inf"
stderr: []
