tests/snapshots/cli__reference_files@factor__12.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/12.factor
---
status: 0
stdout:
  - "1804932184728136300000"
stderr: []
