tests/snapshots/cli__reference_files@factor__14.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/14.factor
---
status: 0
stdout:
  - "843887412.1726692"
stderr: []
