tests/snapshots/cli__reference_files@factor__15.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/15.factor
---
status: 0
stdout:
  - "-99593522.55821216"
stderr: []
