tests/snapshots/cli__reference_files@factor__16.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/16.factor
---
status: 0
stdout:
  - "80654381171315.28"
stderr: []
