tests/snapshots/cli__reference_files@factor__17.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/17.factor
---
status: 0
stdout:
  - "991274961224978500000"
stderr: []
