tests/snapshots/cli__reference_files@factor__18.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/18.factor
---
status: 101
stdout: []
stderr:
  - "thread 'main' panicked at src/scanner.rs:112:59:"
  - "called `Result::unwrap()` on an `Err` value: ParseIntError { kind: PosOverflow }"
  - "note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace"
